HandleGetProfile is implemented
